🐛 Fix init page colors for high-contrast too

--- a/initpage/initpage.css
+++ b/initpage/initpage.css
@@ -1,3 +1,7 @@
+* {
+	forced-color-adjust: none;
+}
+
 html,body {
 	font-size: 16px;
 	padding: 0;
